--- a/user_side/templates/cart.html
+++ b/user_side/templates/cart.html
@@ -70,14 +70,32 @@
                         {% endfor %}
                         <tr>
                             <td colspan="4"></td>
+                            <td colspan="2">
+                                <div class="form-group row justify-content-center">
+                                    <label for="coupon_code" class="col-sm-4 col-form-label">Coupon Code:</label>
+                                    <div class="col-sm-8 input-group">
+                                        <input type="text" class="form-control" id="coupon_code" name="coupon_code" placeholder="Enter coupon code" value="{{ coupon_code }}">
+                                        <div class="input-group-append">
+                                            <button type="button" class="btn btn-primary" id="apply_coupon_button">Apply</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="4"></td>
                             <td>
-                                <h5>Sub total = <span id="total_price">{{ total_price }} rs</span></h5>
+                                {% if discounted_price %}
+                                    <h5>Discounted total = <span id="total_price">{{ discounted_price }} rs</span></h5>
+                                {% else %}
+                                    <h5>Total = <span id="total_price">{{ total_price }} rs</span></h5>
+                                {% endif %}
                             </td>
                         </tr>
                         <tr class="out_button_area">
                             <td colspan="4"></td>
-                            <td >
-                                <div class="checkout_btn_inner d-flex align-items-center">
+                            <td colspan="2">
+                                <div class="checkout_btn_inner d-flex justify-content-center align-items-center">
                                     <a class="gray_btn" href="{% url 'shop' %}">Continue Shopping</a>
                                     <a class="primary-btn" href="{% url 'checkout' %}">Proceed to checkout</a>
                                 </div>
@@ -139,6 +157,34 @@ $(document).ready(function() {
                 } else {
                     alert(response.message);
                 }
+            }
+        });
+    });
+
+    $('#apply_coupon_button').click(function() {
+        var couponCode = $('#coupon_code').val();
+        var totalPrice = parseFloat($('#total_price').text());  // Assuming total price is displayed somewhere with id="total_price"
+        
+        $.ajax({
+            type: 'POST',
+            url: '{% url "apply-coupon" %}',
+            data: {
+                'coupon_code': couponCode,
+                'total_price': totalPrice,
+                'csrfmiddlewaretoken': '{{ csrf_token }}'
+            },
+            success: function(response) {
+                if (response.success) {
+                    // Update the displayed total price with the discounted amount
+                    $('#total_price').text(response.discounted_price);
+                } else {
+                    // Display the error message to the user
+                    alert(response.error);
+                }
+            },
+            error: function(xhr, status, error) {
+                console.error(xhr.responseText);
+                // Handle the error here, such as displaying an error message to the user
             }
         });
     });
